--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -8,14 +8,14 @@
   cursor: pointer;
 }
 
-img:hover {
+.imgCard:hover {
   transition: 0.5s ease-in-out;
   height: 160px;
   width: 160px;
   margin: 20px;
 }
 
-img {
+.imgCard {
   display: block;
   /* margin: auto; */
   margin: 25px;
